--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,3 +120,10 @@ jobs:
           name: ${{ env.MAIN_MODULE }}_${{ matrix.name }}
           path: |
             ${{ github.workspace }}/${{ env.MAIN_MODULE }}.dist
+
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: nuitka_crash_report_${{ matrix.name }}
+          path: |
+            ${{ github.workspace }}/nuitka-crash-report.xml
