--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
-      max-parallel: 1
       matrix:
-        os: [ubuntu-20.04, macos-11, windows-2019]
-        python-version: ["3.11"]
-        nuitka-version: ["nuitka==1.9.2", "https://github.com/Nuitka/Nuitka/archive/refs/heads/factory.zip"]
+        os: [ubuntu-20.04, macos-12, windows-2019]
+        python-version: ["3.12"]
+        nuitka-version: ["nuitka==2.3.10", "https://github.com/Nuitka/Nuitka/archive/refs/heads/factory.zip"]
         include:
           - os: ubuntu-20.04
             name: Linux
@@ -60,7 +59,7 @@ jobs:
           key: ${{ runner.os }}-nuitka
 
       - name: Install poetry
-        run: pipx install poetry==1.5.0
+        run: pipx install poetry==1.8.3
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -104,6 +103,23 @@ jobs:
             --show-memory \
             --show-modules \
             --trace-execution \
+            --include-module=black.brackets \
+            --include-module=black.debug \
+            --include-module=black.numerics \
+            --include-module=black.rusty \
+            --include-module=black.schema \
+            --include-module=black.strings \
+            --include-module=black.trans \
+            --include-module=black._width_table \
+            --include-module=blib2to3.pygram \
+            --include-module=blib2to3.pgen2.conv \
+            --include-module=blib2to3.pgen2.driver \
+            --include-module=blib2to3.pgen2.grammar \
+            --include-module=blib2to3.pgen2.literals \
+            --include-module=blib2to3.pgen2.parse \
+            --include-module=blib2to3.pgen2.pgen \
+            --include-module=blib2to3.pgen2.tokenize \
+            --include-package-data=blib2to3 \
             ${{ matrix.nuitkaArgs }} \
             ${{ env.PACKAGE_NAME }}/${{ env.MAIN_MODULE }}.py
         shell: bash
