Change example to libcst.matches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         os: [ubuntu-20.04, macos-12, windows-2019]
         python-version: ["3.12"]
-        nuitka-version: ["nuitka==2.3.10", "https://github.com/Nuitka/Nuitka/archive/refs/heads/factory.zip"]
+        nuitka-version: ["nuitka==2.3.10", "nuitka==2.1.6" "https://github.com/Nuitka/Nuitka/archive/refs/heads/factory.zip"]
         include:
           - os: ubuntu-20.04
             name: Linux
@@ -103,23 +103,6 @@ jobs:
             --show-memory \
             --show-modules \
             --trace-execution \
-            --include-module=black.brackets \
-            --include-module=black.debug \
-            --include-module=black.numerics \
-            --include-module=black.rusty \
-            --include-module=black.schema \
-            --include-module=black.strings \
-            --include-module=black.trans \
-            --include-module=black._width_table \
-            --include-module=blib2to3.pygram \
-            --include-module=blib2to3.pgen2.conv \
-            --include-module=blib2to3.pgen2.driver \
-            --include-module=blib2to3.pgen2.grammar \
-            --include-module=blib2to3.pgen2.literals \
-            --include-module=blib2to3.pgen2.parse \
-            --include-module=blib2to3.pgen2.pgen \
-            --include-module=blib2to3.pgen2.tokenize \
-            --include-package-data=blib2to3 \
             ${{ matrix.nuitkaArgs }} \
             ${{ env.PACKAGE_NAME }}/${{ env.MAIN_MODULE }}.py
         shell: bash
