--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "nuitka_bug"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 Nuitka = "2.3.10"
-black = "^24.4.2"
+libcst = "^1.4.0"
 
 [build-system]
 requires = ["poetry-core"]
