--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,11 @@ packages = [{include = "nuitka_bug"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-Nuitka = "2.3.10"
-libcst = "^1.4.0"
+Nuitka = "2.6.0"
+mypy = "^1.14.1"
+
+[tool.poetry.group.dev.dependencies]
+setuptools = "^75.8.0"
 
 [build-system]
 requires = ["poetry-core"]
