Add postbuild script with copying mypyc lib

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,6 +105,8 @@ jobs:
             --trace-execution \
             ${{ matrix.nuitkaArgs }} \
             ${{ env.PACKAGE_NAME }}/${{ env.MAIN_MODULE }}.py
+
+          poetry run python scripts/post_build.py
         shell: bash
 
       - name: TestRun
