Include mypy_extensions explicitly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,6 +104,7 @@ jobs:
             --show-modules \
             --trace-execution \
             --include-module=typing_extensions \
+            --include-module=mypy_extensions   \
             ${{ matrix.nuitkaArgs }} \
             ${{ env.PACKAGE_NAME }}/${{ env.MAIN_MODULE }}.py
 
