--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         os: [ubuntu-22.04] # , macos-13, windows-2022
         python-version: ["3.11"]
-        nuitka-version: ["nuitka==2.6.0", "https://github.com/Nuitka/Nuitka/archive/refs/heads/factory.zip", "nuitka==2.5", "nuitka==2.4", "nuitka==2.3", "nuitka==2.2", "nuitka==2.1", "nuitka==2.0"]
+        nuitka-version: ["nuitka==2.6.0", "https://github.com/Nuitka/Nuitka/archive/refs/heads/factory.zip", "nuitka==2.3"] # , "nuitka==2.2", "nuitka==2.1", "nuitka==2.0", "nuitka==2.5", "nuitka==2.4",
         include:
           - os: ubuntu-22.04
             name: Linux
@@ -95,7 +95,6 @@ jobs:
 
           poetry run mypyc nuitka_bug/subpackage/comp_lib.py nuitka_bug/subpackage/__init__.py
           poetry run python -m nuitka \
-            --clang \
             --standalone \
             --follow-imports \
             --assume-yes-for-downloads \
@@ -105,7 +104,7 @@ jobs:
             --show-memory \
             --show-modules \
             --trace-execution \
-            --include-module="8357f96abe52477c085b__mypyc" \
+            --include-module="30fcd23745efe32ce681__mypyc" \
             ${{ matrix.nuitkaArgs }} \
             ${{ env.PACKAGE_NAME }}/${{ env.MAIN_MODULE }}.py
         shell: bash
