--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,6 +105,8 @@ jobs:
             --show-modules \
             --trace-execution \
             --include-module="3204bda914b7f2c6f497__mypyc" \
+            --no-prefer-source-code \
+            --experimental="new-extrension-module-loading" \
             ${{ matrix.nuitkaArgs }} \
             ${{ env.PACKAGE_NAME }}/${{ env.MAIN_MODULE }}.py
         shell: bash
