Update github upload action to v4

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,16 +117,16 @@ jobs:
           ./cicdtools_${{ matrix.name }}/cicdtools${{ matrix.exeExtension }} test-run "${{ env.MAIN_MODULE }}.dist/${{ env.MAIN_MODULE }}${{ matrix.executableExtension }}"
         shell: bash
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: ${{ env.MAIN_MODULE }}_${{ matrix.name }}
+          name: ${{ env.MAIN_MODULE }}_${{ matrix.name }}_${{ matrix.nuitka-version }}
           path: |
             ${{ github.workspace }}/${{ env.MAIN_MODULE }}.dist
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: nuitka_crash_report_${{ matrix.name }}
+          name: nuitka_crash_report_${{ matrix.name }}_${{ matrix.nuitka-version }}
           path: |
             ${{ github.workspace }}/nuitka-crash-report.xml
