--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         os: [ubuntu-22.04] # , macos-13, windows-2022
         python-version: ["3.11"]
-        nuitka-version: ["nuitka==2.6.0", "https://github.com/Nuitka/Nuitka/archive/refs/heads/factory.zip", "nuitka==2.3"] # , "nuitka==2.2", "nuitka==2.1", "nuitka==2.0", "nuitka==2.5", "nuitka==2.4",
+        nuitka-version: ["nuitka==2.6.2", "https://github.com/Nuitka/Nuitka/archive/refs/heads/factory.zip"] # , "nuitka==2.2", "nuitka==2.1", "nuitka==2.0", "nuitka==2.5", "nuitka==2.4",
         include:
           - os: ubuntu-22.04
             name: Linux
